# drf_vps_api

./: README.md  docker-compose.yml  pyproject.toml
tests/: test_crud_category.py  test_crud_operation.py
vps_project/: asgi.py  settings.py  urls.py  wsgi.py
vps_project/api_v1/: admin.py  apps.py  models.py  urls.py  views.py
vps_project/api_v1/migrations/: 0001_initial.py
